# DX12

./: .gitignore  CMakeLists.txt  vcpkg.json
shaders/: basic.hlsl  common.hlsli  deferred_lighting.hlsl  forward.hlsl  gbuffer.hlsl  shadow.hlsl
src/: main.cpp
src/core/: Log.cpp  Log.h  Timer.h
src/engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  InputSystem.cpp  InputSystem.h  Scene.cpp  Scene.h
src/platform/: Window.cpp  Window.h
src/renderer/: RendererDX12.cpp  RendererDX12.h
tools/unreal/: export_static_mesh_actors.py
